--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <html>
 
 <head>
-    <title>Regner det i Ålesund idag?</title>
+    <title>Skal det regne i Ålesund i dag?</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-    <h1>Regner det i Ålesund idag?</h1>
-    <p id="result"></p>
-
-
-    <script src="api_call.js"></script>
+    <div id="content">
+        <h1>Skal det regne i Ålesund i dag?</h1>
+        <p id="result"></p>
+        <script src="api_call.js"></script>
+    </div>
 </body>
 
 </html>
